# LogicLand

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  turbo.json
logicland-engine/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
logicland-engine/analytics/: README.md  __init__.py
logicland-engine/api/: README.md  __init__.py  routers.py
logicland-engine/badges/: README.md  __init__.py  service.py
logicland-engine/certificates/: README.md  __init__.py
logicland-engine/config/: README.md  __init__.py  settings.py
logicland-engine/curriculum/: README.md  __init__.py  beginner_journey.py  worlds.py
logicland-engine/flashcards/: README.md  __init__.py  service.py
logicland-engine/gamification/: README.md  __init__.py  service.py
logicland-engine/llm/: README.md  __init__.py  provider.py
logicland-engine/models/: README.md  __init__.py  schemas.py
logicland-engine/parents/: README.md  __init__.py
logicland-engine/progress/: README.md  __init__.py  service.py
logicland-engine/prompts/: README.md  __init__.py  templates.py
logicland-engine/quizzes/: README.md  __init__.py  service.py
logicland-engine/reports/: README.md  __init__.py
logicland-engine/students/: README.md  __init__.py
logicland-engine/tests/: README.md  __init__.py  test_phase2.py  test_smoke.py  test_worlds.py
logicland-engine/tutor/: README.md  __init__.py  service.py
logicland-engine/utils/: README.md  __init__.py  jsonx.py  safety.py
(+166 files in other folders)
